@@ -1,7 +1,10 @@
 2009-07-04  David Sedeño <david@alderia.com>
 
-	* src/main_window.c: Fix drag'n'drop freeze. 
-	Thansk to Artur Rona <ari-tczew@tlen.pl> for the bugreport.
+	
+	* src/main_window.c: 
+		- Fix drag'n'drop freeze. Thansk to Artur Rona <ari-tczew@tlen.pl> 
+		for the bugreport.
+		- Don't add download from gconf if url is null.
 
 2009-06-30  David Sedeño <david@alderia.com>
 
